--- a/src/EzSolrWorkshopBundle/Resources/views/custom_field_facet.html.twig
+++ b/src/EzSolrWorkshopBundle/Resources/views/custom_field_facet.html.twig
@@ -4,6 +4,6 @@
 
 <ul>
 {% for key, entry in search_result.facets[0].entries %}
-    <li>{{ content_type_map[key] }} ({{ entry }})</li>
+    <li>{{ key }} ({{ entry }})</li>
 {% endfor %}
 </ul>
